# attackshark-battery-bridge

./: LICENSE.md  README.md  TECHNICAL.md  main.py  pyproject.toml
.github/workflows/: build-release-binary.yml  sync-aur-release.yml
packaging/: attackshark-battery-bridge.service.pkg  config.example.toml
packaging/aur/: .SRCINFO  PKGBUILD  README.md  attackshark-battery-bridge.install  update-srcinfo.sh
scripts/: build-singlefile.sh  init-aur-repo.sh  install.sh  render_aur_metadata.py  uninstall.sh
src/attackshark_battery_bridge/: __main__.py  cli.py  config.py  device_profiles.py  discovery.py  exceptions.py  logging_utils.py  models.py  profiles.py
src/attackshark_battery_bridge/daemon/: service.py  uevent.py
src/attackshark_battery_bridge/drivers/: profile_driver.py
src/attackshark_battery_bridge/profiles/: attack_shark_r5_ultra.toml
src/attackshark_battery_bridge/publishers/: base.py  composite.py  factory.py  json_status.py  uhid.py
src/attackshark_battery_bridge/transport/: hidraw.py
systemd/: attackshark-battery-bridge.service
tests/: test_cli.py  test_daemon.py  test_driver.py  test_profiles.py  test_uhid.py
